# Asylum

./: .gitignore  CMakeLists.txt  GenerateProject.bat  GeoTest1.py  GeoTest2.py  boat.wsdb  readme.md
Asset/: Steering Rack Protector.CATPart
Asset/Mesh/IGS/: Steering Rack Protector.igs  loftsurface.IGS
Asset/Mesh/INP/: Job-1.inp  t1.inp  t13_simplest.inp  t13_test.inp  test.inp
Asset/Shaders/GLSL/: blinnphong.frag  blinnphongmy.vert  rendersurfacemy.frag  rendersurfacemy.vert  simpleblinn.frag  simpleblinn.vert  tessellatesurfacemy.comp  tessellatesurfacemyRE.comp
Asset/Shaders/GLSL/my/: renderspheremy.frag  renderspheremy.geom  renderspheremy.vert  rendersurfacemy.frag  rendersurfacemy.vert  tessellatesurfacemyRE.comp
Asset/SolidWorks/: cube.IGS  cube.SLDPRT  cylinder.IGS  cylinder.SLDPRT  doughnut.IGS  doughnut.SLDPRT  loftsurface.SLDPRT
Common/: CMakeLists.txt
Common/Application/: CMakeLists.txt  application.cpp  win32application.cpp
Common/Camera/: CMakeLists.txt
Common/GeomMath/: CMakeLists.txt
Common/Hash/: CMakeLists.txt  xxhash.h
Common/Physics/: CMakeLists.txt
Common/Utility/: CMakeLists.txt  dds.cpp  gl4ext.cpp  gl4ext.h  glextensions.cpp  glextensions.h
Framework/: CMakeLists.txt  drawingitem.cpp  drawingitem.h  renderingcore.h  win32window.h
Scripts/: build_imgui.bat
Test/: CMakeLists.txt
Test/BinReadTest/: CMakeLists.txt  main.cpp
Test/Bitmap/: CMakeLists.txt  main.cpp
Test/Coroutine/: CMakeLists.txt  main.cpp
Test/INPReader/: CMakeLists.txt  inpUtil.h  main.cpp
Test/INPUtilTest/: CMakeLists.txt  inpUtil.h  main.cpp
Test/INPUtilTest/StrToNum/: CMakeLists.txt  NumTest.cpp
Test/ImGuiTest/: CMakeLists.txt  main.cpp
Test/Instancing/: CMakeLists.txt  main.cpp
Test/IntervalMerging/: CMakeLists.txt  main.cpp
Test/IntervalMergingTest/: CMakeLists.txt  main.cpp
Test/NURBS/: CMakeLists.txt  main.cpp
Test/NURBSFromMatlab/: CMakeLists.txt  main.cpp
Test/NURBSTest/: CMakeLists.txt  NURBSUtil.h  main.cpp  someDeletedCode.cpp
Test/Ocean/: CMakeLists.txt  fft_test.cpp  main.cpp
Test/STLReader/: CMakeLists.txt  main.cpp  stlTest.cpp  stlUtil.h
Test/STLUtilTest/: CMakeLists.txt  main.cpp
Test/ShadowMapping/: CMakeLists.txt  main.cpp
Test/SphereInstancing/: CMakeLists.txt  main.cpp
Test/glNURBS/: CMakeLists.txt  main.cpp
Test/teapot/: CMakeLists.txt  main.cpp
