add_subdirectory(BinReadTest)
add_subdirectory(Bitmap)
add_subdirectory(Coroutine)
add_subdirectory(glNURBS)
add_subdirectory(ImGuiTest)
add_subdirectory(INPReader)
add_subdirectory(INPUtilTest)
add_subdirectory(Instancing)
add_subdirectory(IntervalMerging)
add_subdirectory(IntervalMergingTest)
add_subdirectory(NURBS)
add_subdirectory(NURBSTest)
add_subdirectory(NURBSFromMatlab)
# add_subdirectory(Ocean)
add_subdirectory(ShadowMapping)
add_subdirectory(SphereInstancing)
add_subdirectory(teapot)